# advanced-alchemy-file-demo

./: .env.example  pyproject.toml
app/: config.py  main.py  models.py  settings.py
app/controllers/: note.py
app/lib/: dependencies.py  services.py
